Add pedal balance ride and lap average data sources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,16 +39,18 @@
     <string name="source_none">None</string>
     <string name="source_heart_rate">Heart Rate</string>
     <string name="source_power">Power</string>
-    <string name="source_power_3s">Power (3 sec avg)</string>
-    <string name="source_power_10s">Power (10 sec avg)</string>
+    <string name="source_power_3s">Power (3 sec Ø)</string>
+    <string name="source_power_10s">Power (10 sec Ø)</string>
     <string name="source_speed">Speed</string>
-    <string name="source_speed_3s">Speed (3 sec avg)</string>
+    <string name="source_speed_3s">Speed (3 sec Ø)</string>
     <string name="source_cadence">Cadence</string>
-    <string name="source_cadence_3s">Cadence (3 sec avg)</string>
+    <string name="source_cadence_3s">Cadence (3 sec Ø)</string>
     <string name="source_grade">Grade</string>
     <string name="source_power_balance">Power Balance</string>
-    <string name="source_power_balance_3s">Power Balance (3 sec avg)</string>
-    <string name="source_power_balance_10s">Power Balance (10 sec avg)</string>
+    <string name="source_power_balance_3s">Power Balance (3 sec Ø)</string>
+    <string name="source_power_balance_10s">Power Balance (10 sec Ø)</string>
+    <string name="source_power_balance_avg">Power Balance (Ride Ø)</string>
+    <string name="source_power_balance_lap">Power Balance (Lap Ø)</string>
     <string name="source_route_progress">Route Progress</string>
     <string name="source_route_remaining">Route Remaining</string>
     <string name="source_front_gear">Front Gear</string>
