--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -49,6 +49,8 @@
     <string name="source_power_balance">Leistungsbalance</string>
     <string name="source_power_balance_3s">Leistungsbalance (3 Sek. Ø)</string>
     <string name="source_power_balance_10s">Leistungsbalance (10 Sek. Ø)</string>
+    <string name="source_power_balance_avg">Leistungsbalance (Fahrt Ø)</string>
+    <string name="source_power_balance_lap">Leistungsbalance (Runde Ø)</string>
     <string name="source_route_progress">Routenfortschritt</string>
     <string name="source_route_remaining">Verbleibende Route</string>
     <string name="source_front_gear">Vorderer Gang</string>
